--- a/docker-swarm/swarm-deploy.yaml
+++ b/docker-swarm/swarm-deploy.yaml
@@ -1,28 +1,34 @@
 ---
-# - name: Setup Docker & NFS
-#   hosts: all
-#   become: true
-#   roles:
-#     - docker_install
-#     - mount_nfs
+- name: Setup Docker & NFS
+  hosts: all
+  become: true
+  roles:
+    - docker_install
+    - mount_nfs
 
-# - name: Init Docker Swarm
-#   hosts: managers[0]
-#   become: true
-#   roles:
-#     - init_docker_swarm
+- name: Init Docker Swarm
+  hosts: managers[0]
+  become: true
+  roles:
+    - init_docker_swarm
 
-# - name: Join Managers
-#   hosts: managers
-#   become: true
-#   roles:
-#     - manager_join_docker_swarm
+- name: Join Managers
+  hosts: managers
+  become: true
+  roles:
+    - manager_join_docker_swarm
 
-# - name: Join Workers
-#   hosts: workers
-#   become: true
-#   roles:
-#     - worker_join_docker_swarm
+- name: Join Workers
+  hosts: workers
+  become: true
+  roles:
+    - worker_join_docker_swarm
+
+- name: Configure IP forwarding for Docker ingress_sbox
+  hosts: all
+  become: true
+  roles:
+    - ip_forwarding
 
 - name: Deploy Portainer
   hosts: managers[0]
