--- a/k3s/roles/k3s/master/tasks/main.yml
+++ b/k3s/roles/k3s/master/tasks/main.yml
@@ -51,6 +51,20 @@
     owner: "{{ ansible_user }}"
     mode: "u=rwx,g=rx,o="
 
+# Use kubectl to deploy yaml. Perhaps this can be added to the manifest folder initially
+- name: Apply kube vip configuration file
+  ansible.builtin.command:
+    cmd: kubectl --kubeconfig /etc/rancher/k3s/k3s.yaml apply -f https://kube-vip.io/manifests/rbac.yaml
+  changed_when: true
+  #when: inventory_hostname == groups['master'][0]
+
+# Apply the kube-vip configration. Perhaps this can be added to the manifest folder initially
+- name: Apply kube vip configuration file
+  ansible.builtin.command:
+    cmd: kubectl --kubeconfig /etc/rancher/k3s/k3s.yaml apply -f https://raw.githubusercontent.com/kube-vip/kube-vip-cloud-provider/main/manifest/kube-vip-cloud-controller.yaml
+  changed_when: true
+  #when: inventory_hostname == groups['master'][0]
+
 - name: Copy config file to user home directory
   copy:
     src: /etc/rancher/k3s/k3s.yaml
@@ -59,12 +73,12 @@
     owner: "{{ ansible_user }}"
     mode: "u=rw,g=,o="
 
-- name: Replace https://localhost:6443 by https://master-ip:6443
-  command: >-
-    k3s kubectl config set-cluster default
-      --server=https://{{ master_ip }}:6443
-      --kubeconfig ~{{ ansible_user }}/.kube/config
-  changed_when: true
+# - name: Replace https://localhost:6443 by https://master-ip:6443
+#   command: >-
+#     k3s kubectl config set-cluster default
+#       --server=https://{{ master_ip }}:6443
+#       --kubeconfig ~{{ ansible_user }}/.kube/config
+#   changed_when: true
 
 - name: Create kubectl symlink
   file:
