fix kubevip ip tls

--- a/k3s/k3s-deploy.yml
+++ b/k3s/k3s-deploy.yml
@@ -9,10 +9,10 @@
     - role: download
     - role: raspberrypi
 
-# - hosts: master
-#   become: yes
-#   roles:
-#     - role: k3s/master
+- hosts: master
+  become: yes
+  roles:
+    - role: k3s/master
 
 - hosts: node
   become: yes
