--- a/k3s/roles/k3s/master/defaults/main.yml
+++ b/k3s/roles/k3s/master/defaults/main.yml
@@ -4,9 +4,9 @@ ansible_user: root
 server_init_args: >-
   {% if groups['master'] | length > 1 %}
     {% if ansible_host == hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) %}
-      --cluster-init
+      --tls-san "{{ apiserver_endpoint }}" --cluster-init
     {% else %}
-      --server https://{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}:6443
+      --server https://{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}:6443 --tls-san "{{ apiserver_endpoint }}"
     {% endif %}
     --token {{ k3s_token }}
   {% endif %}
