--- a/k3s/roles/metallb/tasks/main.yaml
+++ b/k3s/roles/metallb/tasks/main.yaml
@@ -13,7 +13,7 @@
 - name: Apply metallb namespace
   ansible.builtin.command:
     cmd: kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/namespace.yaml
-  become_user: "{{ ansible_user }}"
+  become_user: "root"
   changed_when: true
   when: inventory_hostname == groups['master'][0]
 
@@ -21,7 +21,7 @@
 - name: Apply metallb manifest
   ansible.builtin.command:
     cmd: kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/{{ metallb_version }}/config/manifests/metallb-native.yaml
-  become_user: "{{ ansible_user }}"
+  become_user: "root"
   changed_when: true
   when: inventory_hostname == groups['master'][0]
 
@@ -30,14 +30,14 @@
   ansible.builtin.command:
     cmd: "kubectl wait --namespace metallb-system --for=condition=ready pod --selector=component=controller --timeout=1800s"
   changed_when: true
-  become_user: "{{ ansible_user }}"
+  become_user: "root"
   when: inventory_hostname == groups['master'][0]
 
 # Prep L2 Advertisement for metallb
 - name: Copy metallb L2 Advertisement to server 1
   ansible.builtin.template:
     src: templates/metallb-adv.j2
-    dest: /{{ ansible_user }}/l2advertisment.yaml
+    dest: /home/{{ ansible_user }}/l2advertisment.yaml
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: '0755'
@@ -46,8 +46,8 @@
 # Apply L2 Advertisement for metallb
 - name: Apply metallb L2 Advertisement
   ansible.builtin.command:
-    cmd: kubectl apply -f /{{ ansible_user }}/l2advertisment.yaml
-  become_user: "{{ ansible_user }}"
+    cmd: kubectl apply -f /home/{{ ansible_user }}/l2advertisment.yaml
+  become_user: "root"
   changed_when: true
   when: inventory_hostname == groups['master'][0]
 
@@ -55,7 +55,7 @@
 - name: Copy metallb IPPool to server 1
   ansible.builtin.template:
     src: templates/metallb-ippool.j2
-    dest: /{{ ansible_user }}/ippool.yaml
+    dest: /home/{{ ansible_user }}/ippool.yaml
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
     mode: '0755'
@@ -64,7 +64,7 @@
 # don't think this will work as nodes are no execute, might need agents first
 - name: Apply metallb ipppool
   ansible.builtin.command:
-    cmd: kubectl apply -f /{{ ansible_user }}/ippool.yaml
-  become_user: "{{ ansible_user }}"
+    cmd: kubectl apply -f /home/{{ ansible_user }}/ippool.yaml
+  become_user: "root"
   changed_when: true
   when: inventory_hostname == groups['master'][0]
