--- a/k3s/k3s-deploy.yml
+++ b/k3s/k3s-deploy.yml
@@ -5,9 +5,9 @@
   become: yes
   roles:
     - role: prereq
-    - role: mount_nfs
     - role: download
     - role: raspberrypi
+    - role: nfs
 
 - hosts: master
   become: yes
