--- a/k3s/inventory/hosts.ini
+++ b/k3s/inventory/hosts.ini
@@ -4,6 +4,7 @@
 10.100.99.23 ansible_host=10.100.99.23 ansible_user=alin
 10.100.99.24 ansible_host=10.100.99.24 ansible_user=alin
 10.100.99.25 ansible_host=10.100.99.25 ansible_user=alin
+10.100.99.26 ansible_host=10.100.99.26 ansible_user=alin
 [master]
 10.100.99.20
 10.100.99.21
@@ -14,6 +15,7 @@
 10.100.99.23
 10.100.99.24
 10.100.99.25
+10.100.99.26
 
 
 [k3s_cluster:children]
